--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
 <body>
 
     <!-- Меню -->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg py-lg-4">
+    <header class="header bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
 
                 <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -56,6 +56,8 @@
                         </ul>
                     </div>
                 </div>
+
+                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495) 159-59-01</a>
 
             </div>
         </nav>
@@ -205,7 +207,7 @@
                             Понимание потребностей онлайн-бизнеса, опыт взаимодействия с тысячами клиентов, высокая квалификация персонала, собственные «ноу-хау» и  высокое качество по удивительно низким и «вкусным» ценам.</p>
                     </div>
                 </div>
-                <div class="row g-4">
+                <div class="row gy-4">
                     <div class="col-12 text-center">
                         <p class="h1 fw-bold mb-3">Только плюсы</p>
                     </div>
@@ -217,7 +219,7 @@
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-1">
                                     <button class="accordion-button fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a1" aria-expanded="true" aria-controls="a1">
-                                        Готовые сайты & Интернет-магазины
+                                        Готовые сайты &amp; Интернет-магазины
                                     </button>
                                 </div>
                                 <div id="a1" class="accordion-collapse collapse show" aria-labelledby="advantage-heading-1" data-bs-parent="#advantage">
@@ -230,7 +232,7 @@
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-2">
                                     <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a2" aria-expanded="false" aria-controls="a2">
-                                        Техническая поддерка & Интеграции
+                                        Техническая поддерка &amp; Интеграции
                                     </button>
                                 </div>
                                 <div id="a2" class="accordion-collapse collapse" aria-labelledby="advantage-heading-2" data-bs-parent="#advantage">
@@ -243,7 +245,7 @@
                             <div class="accordion-item">
                                 <div class="accordion-header" id="advantage-heading-3">
                                     <button class="accordion-button collapsed fz-15" type="button" data-bs-toggle="collapse" data-bs-target="#a3" aria-expanded="false" aria-controls="a3">
-                                        SEO-продвижение & Контекстная реклама
+                                        SEO-продвижение &amp; Контекстная реклама
                                     </button>
                                 </div>
                                 <div id="a3" class="accordion-collapse collapse" aria-labelledby="advantage-heading-3" data-bs-parent="#advantage">
@@ -327,7 +329,7 @@
     <div class="footer-border"></div>
     <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
-            <div class="row g-2 py-4">
+            <div class="row gy-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -359,7 +361,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row g-2 py-4 align-items-end">
+            <div class="row gy-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
                     <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
@@ -462,6 +464,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
