--- a/shop.html
+++ b/shop.html
@@ -17,8 +17,8 @@
 <body>
 
     <!-- Меню -->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg py-lg-4">
+    <header class="header bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
 
                 <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -57,6 +57,8 @@
                     </div>
                 </div>
 
+                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495) 159-59-01</a>
+
             </div>
         </nav>
     </header>
@@ -80,12 +82,12 @@
             <div class="container">
                 <p class="fz-15 fw-light mb-0">Для своего бизнеса</p>
                 <h1 class="text-uppercase fw-bold mb-5">Выбери готовый сайт</h1>
-                <!-- <div class="row g-4">
+                <!-- <div class="row gy-4">
                     <div class="col-lg-4">
                         123
                     </div>
                     <div class="col-lg-8">
-                        <div class="row g-4">
+                        <div class="row gy-4">
                             <div class="col-md-6">
                                 <div class="card card-case">
                                     <img class="card-img" src="img/case-01.png" alt="">
@@ -98,7 +100,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="row g-4">
+                <div class="row gy-4">
                     <div class="col-md-6 col-lg-4">
                         <div class="card card-shop-item shadow mt-4">
                             <a class="hover-shine" href="shop-item.html">
@@ -113,7 +115,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -138,7 +140,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -163,7 +165,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -188,7 +190,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -213,7 +215,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -238,7 +240,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -263,7 +265,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -288,7 +290,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -313,7 +315,7 @@
                                 </div>
                             </div>
                             <div class="card-footer">
-                                <div class="row g-3">
+                                <div class="row gy-2">
                                     <div class="col-lg-6">
                                         <a class="btn btn-primary w-100" href="shop-item.html">Подробнее</a>
                                     </div>
@@ -334,7 +336,7 @@
     <div class="footer-border"></div>
     <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
-            <div class="row g-2 py-4">
+            <div class="row gy-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -366,7 +368,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row g-2 py-4 align-items-end">
+            <div class="row gy-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
                     <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
@@ -469,6 +471,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
