--- a/cases.html
+++ b/cases.html
@@ -17,8 +17,8 @@
 <body>
 
     <!-- Меню -->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg py-lg-4">
+    <header class="header bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
 
                 <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -57,6 +57,8 @@
                     </div>
                 </div>
 
+                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495) 159-59-01</a>
+
             </div>
         </nav>
     </header>
@@ -79,7 +81,7 @@
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
                 <h1 class="text-uppercase fw-bold mb-5">Реализованные проекты</h1>
-                <div class="row g-4 justify-content-between">
+                <div class="row gy-4 justify-content-between">
                     <div class="col-md-6 col-lg-5">
                         <div class="card card-case py-3 py-lg-4">
                             <img class="card-img" src="img/case-01.png" alt="">
@@ -144,7 +146,7 @@
     <div class="footer-border"></div>
     <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
-            <div class="row g-2 py-4">
+            <div class="row gy-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -176,7 +178,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row g-2 py-4 align-items-end">
+            <div class="row gy-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
                     <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
@@ -279,6 +281,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
