--- a/shop-item.html
+++ b/shop-item.html
@@ -17,8 +17,8 @@
 <body>
 
     <!-- Меню -->
-    <header class="header">
-        <nav class="navbar navbar-expand-lg py-lg-4">
+    <header class="header bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
 
                 <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -57,6 +57,8 @@
                     </div>
                 </div>
 
+                <a class="fw-bold text-decoration-none d-none d-xl-inline-flex ms-4" href="tel:+74951595901">+7 (495) 159-59-01</a>
+
             </div>
         </nav>
     </header>
@@ -79,7 +81,7 @@
 
         <section class="section py-5 dark-mode bg-color-black color-white">
             <div class="container">
-                <div class="row g-4">
+                <div class="row gy-4">
                     <div class="col-lg-4">
                         <div class="sticky-top pt-lg-5">
                             <h1 class="fw-bold mb-5">Дрова-шоп</h1>
@@ -92,7 +94,7 @@
                             <p><span class="color-blue">Технологии</span>: React JS, HTML5, SASS, LESS, SCSS, Bootstrap 5</p>
                             <p>Это удобный сайт и гибкий шаблон для магазина одежды.</p>
                             <p>Отзывчивый макет, современные цветовые стили. Динамический AJAX фильтр, CSS3, HTML5 и многие другие функции, которые помогут Вам создать магазин.</p>
-                            <div class="row g-3 py-5">
+                            <div class="row gy-3 py-5">
                                 <div class="col-md-6">
                                     <a class="btn btn-primary btn-lg w-100" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Купить</a>
                                 </div>
@@ -115,7 +117,7 @@
     <div class="footer-border"></div>
     <footer class="footer py-4 dark-mode bg-color-black color-white">
         <div class="container">
-            <div class="row g-2 py-4">
+            <div class="row gy-2 py-4">
                 <div class="col-lg-3">
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a class="navbar-brand logo hover-opacity" href="index.html">
@@ -147,7 +149,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row g-2 py-4 align-items-end">
+            <div class="row gy-2 py-4 align-items-end">
                 <div class="col-lg-6 text-center text-lg-end order-lg-2">
                     <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
                     <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
@@ -250,6 +252,7 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
