--- a/cases-item.html
+++ b/cases-item.html
@@ -96,6 +96,10 @@
                         </div>
                     </div>
                     <div class="col-lg-8">
+                        <!-- ................................................................................... -->
+                        <!-- ............................. Программисту на заметку ............................. -->
+                        <!-- Должна быть возможность добавлять кастомный код из админки, а не только изображение -->
+                        <!-- ................................................................................... -->
                         <img class="w-100" src="img/case-about.png" alt="">
                     </div>
                 </div>
